@@ -33,6 +33,7 @@ Changes since 1.4.0:
 * Added ecrt_master() userspace interface, to get information about a
   master (thanks to Martin Troxler).
 * Introduced ecrt_master_slave() to get information about a certain slave.
+* Fixed SDO upload segment response (thanks to Christoph Peter).
 * SDO entry access rights are shown in 'ethercat sdos'.
 * Added 64-bit data access macros to application header.
 * Added debug level for all masters as a module parameter. Thanks to Erwin
